# ppp

./: .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: dependabot.yml  stale.yml
.github/workflows/: compatibility.yml  lint.yml  publish.yml  release.yml  rust.yml  tag.yml  test.yml
benches/: binary.rs  text.rs  textv2.rs  v2.rs
examples/: one_byte.rs  server.rs
src/: appveyor.yml  binary.rs  bytes.rs  error.rs  ip.rs  lib.rs  main.rs  model.rs  parser.rs  text.rs
src/ip/: mod.rs
src/model/: mod.rs
src/model/borrowed/: mod.rs  v1.rs  v2.rs
src/v1/: borrowed.rs  error.rs  mod.rs  model.rs
src/v2/: builder.rs  error.rs  mod.rs  model.rs
