[package]
name = "ppp"
description = "A Proxy Protocol Parser written in Rust. See HAProxy for the protocol specification."
version = "1.2.1"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/ppp"
repository = "https://github.com/misalcedo/ppp"
documentation = "https://docs.rs/ppp/1.0.0/ppp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "binary"
harness = false

[[bench]]
name = "text"
harness = false
