[package]
name = "ppp"
description = "A Proxy Protocol Parser written in Rust. See HAProxy for the protocol specification."
version = "2.0.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/ppp"
repository = "https://github.com/misalcedo/ppp"
documentation = "https://docs.rs/ppp"

[profile.release]
lto = true
debug = true

[dependencies]
thiserror = "1"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.4", features = ["criterion", "flamegraph", "protobuf"] }

[[bench]]
name = "binary"
harness = false

[[bench]]
name = "text"
harness = false
