[package]
name = "ppp"
description = "A Proxy Protocol Parser written in Rust. See HAProxy for the protocol specification."
version = "2.3.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/ppp"
repository = "https://github.com/misalcedo/ppp"
documentation = "https://docs.rs/ppp"

[profile.release]
lto = true
debug = true

[features]
default = []

[dependencies]
thiserror = "1"

[dev-dependencies]
criterion = "0.4"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph", "protobuf-codec"] }

[[bench]]
name = "binary"
harness = false

[[bench]]
name = "text"
harness = false
